# opensource-website-seed-basic

./: Cargo.toml  Makefile.toml  README.md  index.html
src/: lib.rs  page.rs
src/page/: home.rs  partial.rs  tags.rs
