[package]
version = "0.1.0"
name = "opensource-website-seed-basic"
repository = "https://github.com/MartinKavik/opensource-website-seed-basic"
authors = ["martin@kavik.cz"]
readme = "./README.md"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dev-dependencies]
wasm-bindgen-test = "0.3.17"

[dependencies]
seed = { git = "https://github.com/seed-rs/seed", rev = "597effe" }
serde = "1.0.115"

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-Os']
